Do not show the missing Amazon location warning on startup if the service is hidden

This is annoying for users who do not want or cannot use the store.

BUG:297552
FIXED-IN:2.6